fix: swagger remove multipart form-data
